# harfbuzz

./: .cvsignore  .gitignore  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  ftglue.c  ftglue.h  harfbuzz-arabic.cpp  harfbuzz-buffer.c  harfbuzz-buffer.h  harfbuzz-dump-main.c  harfbuzz-external.h  harfbuzz-gdef-private.h  harfbuzz-gdef.c  harfbuzz-gdef.h  harfbuzz-global.c  harfbuzz-global.h  harfbuzz-gpos-private.h  harfbuzz-gpos.c  harfbuzz-gpos.h  harfbuzz-gsub-private.h  harfbuzz-gsub.c  harfbuzz-gsub.h  harfbuzz-hangul.c  harfbuzz-hangul.cpp  harfbuzz-hebrew.cpp  harfbuzz-impl.c  harfbuzz-impl.h  harfbuzz-indic.cpp  harfbuzz-khmer.c  harfbuzz-khmer.cpp  harfbuzz-myanmar.c  harfbuzz-myanmar.cpp  harfbuzz-open-private.h  harfbuzz-open.c  harfbuzz-shape.h  harfbuzz-shaper-all.cpp  harfbuzz-shaper-private.h  harfbuzz-shaper.cpp  harfbuzz-shaper.h  harfbuzz-stream.c  harfbuzz-stream.h  harfbuzz-thaana.cpp  harfbuzz-thai.c  (+3 more)
test/: main.c
test/qt/generator/: main.cpp
tests/linebreaking/: harfbuzz-qt.cpp  main.cpp
tests/shaping/: main.cpp
